--- a/Fotonica/ResonadorSim/Informe/Informe.tex
+++ b/Fotonica/ResonadorSim/Informe/Informe.tex
@@ -83,7 +83,7 @@
 
 		\section{Introducción} % Scope of the project = rad effects + minimization
 							 
-			TEXTO
+			Patri comprate un portatil
 
 			\begin{figure}[H]
 				\centering
